李继坤的区块链浏览器个性化修改 修改内容： - 界面中文化 - 优化本地Geth连接 - 添加项目信息 - 修改页脚显示实训信息

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,9 @@
 <div class="container" style="padding-top: 50px;">
 
-    <h1 style="text-align:center;">Welcome to the Etherparty Block Explorer!</h1>
+    <h1 style="text-align:center;">此网页视为丰川祥子攻击范围的延伸</h1>
 
     <h4 style="text-align:center; margin-top: 30px;">
-      <a href="/#/block/{{blockNum}}">Latest Block: {{blockNum}}</a>
+      <a href="/#/block/{{blockNum}}">这是我最后的波纹了: {{blockNum}}</a>
     </h4>
 
     <table class="table table-striped" cellpadding="0" cellspacing="0" style="padding:0px;float:left;margin:0px;width:100%">
